api documentation updated
